--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,10 @@
   "proxy": "http://localhost:4000",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "7.0.15",
+    "node": "15.4.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
